--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -20,7 +20,25 @@
         android:layout_centerInParent="true"
         android:textColor="#fff"
         android:textSize="20sp" />
+    <Button
+        android:id="@+id/address_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="60dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/ic_address"
+        />
 
+    <Button
+        android:id="@+id/share_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="100dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/ic_share"
+        />
     <TextView
         android:id="@+id/title_update_time"
         android:layout_width="wrap_content"
